crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_float_enum_query_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type Sort string

const (
	SortAsc  Sort = "Asc"
	SortDesc Sort = "Desc"
)

// Valid reports whether Sort is a defined variant.
func (v Sort) Valid() bool {
	switch v {
	case SortAsc, SortDesc:
		return true
	default:
		return false
	}
}

type Item struct {
	Id   int64  `json:"id"`
	Name string `json:"name"`
}
