crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_map_bool_float_types.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

package api

type Config struct {
	Settings  map[string]string `json:"settings"`
	Enabled   bool              `json:"enabled"`
	Threshold float64           `json:"threshold"`
}
