crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_all_typeless_client.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"fmt"
	"net/http"
)

// ApiClient is a typed HTTP client for the API.
type ApiClient struct {
	BaseURL string
	Client  *http.Client
}

// NewApiClient creates a new API client with the given base URL.
func NewApiClient(baseURL string) *ApiClient {
	return &ApiClient{BaseURL: baseURL, Client: http.DefaultClient}
}
func (c *ApiClient) EnqueueJob() (*EnqueueJobResponse, error) {
	u := fmt.Sprintf("%s/api/jobs", c.BaseURL)
	req, err := http.NewRequest("POST", u, nil)
	if err != nil {
		return nil, err
	}
	resp, err := c.Client.Do(req)
	if err != nil {
		return nil, err
	}
	defer resp.Body.Close()
	if resp.StatusCode >= 400 {
		return nil, fmt.Errorf("HTTP %d", resp.StatusCode)
	}
	result := EnqueueJobResponse{Status: resp.StatusCode}
	return &result, nil
}
