crates/phoenix-codegen/src/snapshots/phoenix_codegen__go__tests__go_multi_status_all_typeless_server.snap
---
source: crates/phoenix-codegen/src/go_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

package api

import (
	"net/http"
)

// NewRouter creates an http.ServeMux that routes requests to the given handlers.
func NewRouter(h Handlers) *http.ServeMux {
	mux := http.NewServeMux()
	mux.HandleFunc("POST /api/jobs", func(w http.ResponseWriter, r *http.Request) {
		result, err := h.EnqueueJob()
		if err != nil {
			http.Error(w, err.Error(), http.StatusInternalServerError)
			return
		}
		if result == nil {
			http.Error(w, "handler returned nil result", http.StatusInternalServerError)
			return
		}
		switch result.Status {
		case 202, 204:
		default:
			http.Error(w, "handler returned undeclared status", http.StatusInternalServerError)
			return
		}
		w.WriteHeader(result.Status)
	})
	return mux
}
